# fractonkv

./: .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  README.md  architecture.md  keep_json.txt  script.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_issue.md
.github/workflows/: format.yml
docs/: architeture.md  roadmap.md
fractonkv-core/: Cargo.toml
fractonkv-core/src/: errors.rs  main.rs
fractonkv-core/src/commands/: dispatcher.rs  get.rs  mod.rs  set.rs
fractonkv-core/src/shard/: hasher.rs  manager.rs  mod.rs  shard.rs  types.rs
fractonkv-macros/: Cargo.toml
fractonkv-macros/src/: lib.rs
src/: main.rs
src/engine/: codec.rs  mod.rs  router.rs
src/shard/: manager.rs  mod.rs
src/store/: commands.rs  entry.rs  kv.rs  mod.rs
