[package]
name = "fractonkv-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
proc-macro-error = "1.0.4"
convert_case = "0.8.0"
